--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer class="footer -container -pad-h">
-  Portfolio designed and coded by Joe Wroten | 
-  <a href="mailto:joe@wroten.me">joe@wroten.me</a> |
+  Portfolio designed and coded by Jo Wroten | 
+  <a href="mailto:jo@wroten.me">jo@wroten.me</a> |
   <a href="https://github.com/sharpshark28/portfolio">Project Repo</a>
 </footer>
