--- a/src/assets/stylesheet.css
+++ b/src/assets/stylesheet.css
@@ -91,6 +91,10 @@ a {
   display: inline-block;
 }
 
+.-work-history .tag {
+  background: #EDF7FF;
+}
+
 .-volunteer .tag {
   background: #F3EDFF;
 }
@@ -199,6 +203,11 @@ a {
   max-height: none;
   position: relative;
   top: -.5rem;
+}
+
+.index-interiorlink.-work-history,
+.interior-headline.-work-history {
+  background: linear-gradient(90deg, rgba(181, 212, 242, .3), rgba(95, 118, 132, .3));
 }
 
 .index-interiorlink.-volunteer,
