Tags not clickable currently

--- a/src/templates/interior.hbs
+++ b/src/templates/interior.hbs
@@ -46,7 +46,7 @@
         <div class="interior-info">
           <ul class="tags interior-tags">
             {{#each repositoryTopics.edges}}
-              <li class="-left"><a href="#" class="tag">{{this.node.topic.name}}</a>
+              <li class="-left"><span class="tag"><!--<a href="#" class="tag">-->{{this.node.topic.name}}<!--</a>--></span>
             {{/each}}
           </ul>
           <div class="interior-link">
