Org/Link Shifted Right in Interior

--- a/src/assets/stylesheet.css
+++ b/src/assets/stylesheet.css
@@ -161,6 +161,9 @@ a {
 .interior-link {
   white-space: nowrap;
 }
+.interior-tags {
+  flex-grow: 1;
+}
 
 .index-interiorlinks {
   list-style-type: none;
