Underlined all links

--- a/src/assets/stylesheet.css
+++ b/src/assets/stylesheet.css
@@ -29,6 +29,9 @@ a {
   color: #15202C;
 }
 
+.-underline {
+  text-decoration: underline;
+}
 .-pad-h {
   padding-left: 20px;
   padding-right: 20px;
