--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -40,7 +40,7 @@
             <svg class="index-interiorlink-icon" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <use xlink:href="./assets/spritesheet.svg#resume" />
             </svg>
-            Resume
+            <span class="-underline">Resume</span>
           </em>
         </a>
       </div>
@@ -54,7 +54,7 @@
             <svg class="index-interiorlink-icon" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <use xlink:href="./assets/spritesheet.svg#{{this.pageType}}" />
             </svg>
-            {{this.name}}
+            <span class="-underline">{{this.name}}</span>
           </h3>
           <p class="index-interiorlink-description -mar-no">{{this.description}}</p>
           <ul class="tags">
