--- a/src/templates/partials/about.hbs
+++ b/src/templates/partials/about.hbs
@@ -13,7 +13,7 @@
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <use xlink:href="./assets/spritesheet.svg#email" />
         </svg>
-        Jo@Wroten.me
+        <span class="-underline">Jo@Wroten.me</span>
       </a>
     </li>
     <li>
@@ -21,7 +21,7 @@
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <use xlink:href="./assets/spritesheet.svg#resume" />
         </svg>
-        Resume
+        <span class="-underline">Resume</span>
       </a>
     </li>
     <li>
@@ -29,7 +29,7 @@
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <use xlink:href="./assets/spritesheet.svg#writing" />
         </svg>
-        Writing
+        <span class="-underline">Writing</span>
       </a>
     </li>
     <li>
@@ -37,7 +37,7 @@
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <use xlink:href="./assets/spritesheet.svg#instagram" />
         </svg>
-        Instagram
+        <span class="-underline">Instagram</span>
       </a>
     </li>
     <li>
@@ -45,7 +45,7 @@
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <use xlink:href="./assets/spritesheet.svg#unsplash" />
         </svg>
-        Unsplash
+        <span class="-underline">Unsplash</span>
       </a>
     </li>
   </ul>
