Centered links in container, looks better lol

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -46,7 +46,7 @@
       </div>
     </div>
   </main>
-  <ol class="index-interiorlinks">
+  <ol class="index-interiorlinks -container -pad-h">
     {{#each this}}
       <li class="index-interiorlink-wrapper">
         <a class="index-interiorlink -{{this.pageType}}" href="./{{this.name}}.html">
