Links point to gaiety.life and gaiety.gallery

--- a/src/templates/partials/about.hbs
+++ b/src/templates/partials/about.hbs
@@ -25,27 +25,19 @@
       </a>
     </li>
     <li>
-      <a href="https://wrotenwrites.com/">
+      <a href="https://gaiety.life/">
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <use xlink:href="./assets/spritesheet.svg#writing" />
         </svg>
-        <span class="-underline">Writing</span>
+        <span class="-underline">Life (Blog)</span>
       </a>
     </li>
     <li>
-      <a href="https://www.instagram.com/gaiety.art/">
+      <a href="https://gaiety.gallery/">
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <use xlink:href="./assets/spritesheet.svg#instagram" />
+            <use xlink:href="./assets/spritesheet.svg#art" />
         </svg>
-        <span class="-underline">Instagram</span>
-      </a>
-    </li>
-    <li>
-      <a href="https://unsplash.com/@sharpshark28">
-        <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <use xlink:href="./assets/spritesheet.svg#unsplash" />
-        </svg>
-        <span class="-underline">Unsplash</span>
+        <span class="-underline">Art</span>
       </a>
     </li>
   </ul>
